--- a/tests/api_testing.ipynb
+++ b/tests/api_testing.ipynb
@@ -9,39 +9,196 @@
     "\n",
     "import sys\n",
     "import os\n",
-    "\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), r'C:\\Users\\Joel\\Desktop\\Sprints Case Study'))\n",
     "\n",
     "if project_root not in sys.path:\n",
     "    sys.path.append(project_root)\n",
     "\n",
-    "from utils import api_client\n",
+    "from utils.connectors import API_Client\n",
+    "from utils.transformations import remove_invalid_rows, convert_to_dataframe\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
     "\n",
-    "base_url = \"https://technical-case-platform-engineer.onrender.com\""
+    "base_url = \"https://technical-case-platform-engineer.onrender.com\"\n",
+    "today = datetime.today()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_connector = API_Client(base_url)\n",
+    "\n",
+    "currency_data = api_connector.get(\"exchange-rates\")\n",
+    "value_data = api_connector.get(\"monthly-data\")\n",
+    "\n",
+    "currency_df = convert_to_dataframe(currency_data)\n",
+    "value_df = convert_to_dataframe(value_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m connect \u001b[38;5;241m=\u001b[39m \u001b[43mapi_client\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbase_url\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m data_extract \u001b[38;5;241m=\u001b[39m connect\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmonthly-data\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m currencies \u001b[38;5;241m=\u001b[39m connect\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexchange-rates\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      SEK\n",
+      "1      SEK\n",
+      "2      SEK\n",
+      "3      SEK\n",
+      "4      EUR\n",
+      "      ... \n",
+      "428    USD\n",
+      "429    USD\n",
+      "430    USD\n",
+      "431    EUR\n",
+      "432    EUR\n",
+      "Name: currency, Length: 433, dtype: object\n",
+      "0    EUR\n",
+      "1    USD\n",
+      "Name: from_currency, dtype: object\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "      <th>company</th>\n",
+       "      <th>currency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>6512.17</td>\n",
+       "      <td>Solvex Solutions</td>\n",
+       "      <td>SEK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>5394.51</td>\n",
+       "      <td>Solvex Solutions</td>\n",
+       "      <td>SEK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>3040.15</td>\n",
+       "      <td>Solvex Solutions</td>\n",
+       "      <td>SEK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>6558.26</td>\n",
+       "      <td>Solvex Solutions</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>5402.61</td>\n",
+       "      <td>Solvex Solutions</td>\n",
+       "      <td>SEK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>428</th>\n",
+       "      <td>2013-06-01</td>\n",
+       "      <td>9090.43</td>\n",
+       "      <td>VertexSphere</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429</th>\n",
+       "      <td>2013-05-01</td>\n",
+       "      <td>6123.12</td>\n",
+       "      <td>VertexSphere</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>2013-04-01</td>\n",
+       "      <td>4246.13</td>\n",
+       "      <td>VertexSphere</td>\n",
+       "      <td>USD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431</th>\n",
+       "      <td>2013-03-01</td>\n",
+       "      <td>1381.20</td>\n",
+       "      <td>VertexSphere</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432</th>\n",
+       "      <td>2013-02-01</td>\n",
+       "      <td>1640.59</td>\n",
+       "      <td>VertexSphere</td>\n",
+       "      <td>EUR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>424 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      timestamp    value           company currency\n",
+       "1    2025-01-01  6512.17  Solvex Solutions      SEK\n",
+       "2    2024-12-01  5394.51  Solvex Solutions      SEK\n",
+       "3    2024-11-01  3040.15  Solvex Solutions      SEK\n",
+       "4    2024-10-01  6558.26  Solvex Solutions      EUR\n",
+       "5    2024-09-01  5402.61  Solvex Solutions      SEK\n",
+       "..          ...      ...               ...      ...\n",
+       "428  2013-06-01  9090.43      VertexSphere      USD\n",
+       "429  2013-05-01  6123.12      VertexSphere      USD\n",
+       "430  2013-04-01  4246.13      VertexSphere      USD\n",
+       "431  2013-03-01  1381.20      VertexSphere      EUR\n",
+       "432  2013-02-01  1640.59      VertexSphere      EUR\n",
+       "\n",
+       "[424 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "connect = api_client(base_url)\n",
-    "\n",
-    "data_extract = connect.get(\"monthly-data\")\n",
-    "currencies = connect.get(\"exchange-rates\")"
+    "cleaned_value_df = remove_invalid_rows(value_df, currency_df)\n",
+    "cleaned_value_df"
    ]
   }
  ],
