updated transformations to include SEK in currency list, currency conversion, annual aggregation by mean value

--- a/tests/api_testing.ipynb
+++ b/tests/api_testing.ipynb
@@ -15,11 +15,16 @@
     "    sys.path.append(project_root)\n",
     "\n",
     "from utils.connectors import API_Client\n",
-    "from utils.transformations import remove_invalid_rows, convert_to_dataframe\n",
+    "from utils.transformations import remove_invalid_rows, convert_to_dataframe, convert_currency, annual_aggregation\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
     "\n",
     "base_url = \"https://technical-case-platform-engineer.onrender.com\"\n",
+    "\n",
+    "exchange_rate_endpoint = \"exchange-rates\"\n",
+    "monthly_date_endpoint = \"monthly-data\"\n",
+    "annual_data_endpoint = \"annual-data\"\n",
+    "\n",
     "today = datetime.today()"
    ]
   },
@@ -31,8 +36,8 @@
    "source": [
     "api_connector = API_Client(base_url)\n",
     "\n",
-    "currency_data = api_connector.get(\"exchange-rates\")\n",
-    "value_data = api_connector.get(\"monthly-data\")\n",
+    "currency_data = api_connector.get(exchange_rate_endpoint)\n",
+    "value_data = api_connector.get(monthly_date_endpoint)\n",
     "\n",
     "currency_df = convert_to_dataframe(currency_data)\n",
     "value_df = convert_to_dataframe(value_data)"
@@ -43,27 +48,6 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      SEK\n",
-      "1      SEK\n",
-      "2      SEK\n",
-      "3      SEK\n",
-      "4      EUR\n",
-      "      ... \n",
-      "428    USD\n",
-      "429    USD\n",
-      "430    USD\n",
-      "431    EUR\n",
-      "432    EUR\n",
-      "Name: currency, Length: 433, dtype: object\n",
-      "0    EUR\n",
-      "1    USD\n",
-      "Name: from_currency, dtype: object\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -92,103 +76,14 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>6512.17</td>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>SEK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-12-01</td>\n",
-       "      <td>5394.51</td>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>SEK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-11-01</td>\n",
-       "      <td>3040.15</td>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>SEK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>6558.26</td>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-09-01</td>\n",
-       "      <td>5402.61</td>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>SEK</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2013-06-01</td>\n",
-       "      <td>9090.43</td>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>429</th>\n",
-       "      <td>2013-05-01</td>\n",
-       "      <td>6123.12</td>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>430</th>\n",
-       "      <td>2013-04-01</td>\n",
-       "      <td>4246.13</td>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>431</th>\n",
-       "      <td>2013-03-01</td>\n",
-       "      <td>1381.20</td>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>432</th>\n",
-       "      <td>2013-02-01</td>\n",
-       "      <td>1640.59</td>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>EUR</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>424 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      timestamp    value           company currency\n",
-       "1    2025-01-01  6512.17  Solvex Solutions      SEK\n",
-       "2    2024-12-01  5394.51  Solvex Solutions      SEK\n",
-       "3    2024-11-01  3040.15  Solvex Solutions      SEK\n",
-       "4    2024-10-01  6558.26  Solvex Solutions      EUR\n",
-       "5    2024-09-01  5402.61  Solvex Solutions      SEK\n",
-       "..          ...      ...               ...      ...\n",
-       "428  2013-06-01  9090.43      VertexSphere      USD\n",
-       "429  2013-05-01  6123.12      VertexSphere      USD\n",
-       "430  2013-04-01  4246.13      VertexSphere      USD\n",
-       "431  2013-03-01  1381.20      VertexSphere      EUR\n",
-       "432  2013-02-01  1640.59      VertexSphere      EUR\n",
-       "\n",
-       "[424 rows x 4 columns]"
+       "Empty DataFrame\n",
+       "Columns: [timestamp, value, company, currency]\n",
+       "Index: []"
       ]
      },
      "execution_count": 3,
@@ -198,7 +93,115 @@
    ],
    "source": [
     "cleaned_value_df = remove_invalid_rows(value_df, currency_df)\n",
+    "cleaned_value_df = cleaned_value_df[cleaned_value_df[\"currency\"]==\"GBP\"]\n",
     "cleaned_value_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>value</th>\n",
+       "      <th>company</th>\n",
+       "      <th>currency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [timestamp, value, company, currency]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "converted_df = convert_currency(cleaned_value_df, currency_df)\n",
+    "converted_df = converted_df[converted_df[\"currency\"]==\"GBP\"]\n",
+    "converted_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company</th>\n",
+       "      <th>year</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [company, year, currency, value]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annual_agg = annual_aggregation(converted_df)\n",
+    "annual_agg"
    ]
   }
  ],
