updated post method to run records 1-by-1, added validation for migration

--- a/tests/api_testing.ipynb
+++ b/tests/api_testing.ipynb
@@ -361,365 +361,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>company</th>\n",
-       "      <th>year</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>56254.686380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>55221.314350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>56392.964327</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>59863.999850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>40127.559717</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>48112.668333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>49536.779533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>60533.855660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>46364.305617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>48985.575850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>42141.437683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>51408.282950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Nexara Technologies</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>64547.775000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>37097.015873</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>39965.604533</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>30581.643100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>48936.282183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>40358.762483</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>44528.350000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>56426.098782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>31221.901350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>39218.983683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>49029.544100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>50247.907100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>25492.656983</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Solvex Solutions</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>6512.170000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>53629.877200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>57173.708583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>43069.671567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>23379.276167</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>23723.678150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>41281.351491</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>39043.681333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>44285.730133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>39146.039836</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>66333.509833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>36240.745717</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>55771.565150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>VertexSphere</td>\n",
-       "      <td>2025</td>\n",
-       "      <td>SEK</td>\n",
-       "      <td>2884.740000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                company  year currency         value\n",
-       "0   Nexara Technologies  2013      SEK  56254.686380\n",
-       "1   Nexara Technologies  2014      SEK  55221.314350\n",
-       "2   Nexara Technologies  2015      SEK  56392.964327\n",
-       "3   Nexara Technologies  2016      SEK  59863.999850\n",
-       "4   Nexara Technologies  2017      SEK  40127.559717\n",
-       "5   Nexara Technologies  2018      SEK  48112.668333\n",
-       "6   Nexara Technologies  2019      SEK  49536.779533\n",
-       "7   Nexara Technologies  2020      SEK  60533.855660\n",
-       "8   Nexara Technologies  2021      SEK  46364.305617\n",
-       "9   Nexara Technologies  2022      SEK  48985.575850\n",
-       "10  Nexara Technologies  2023      SEK  42141.437683\n",
-       "11  Nexara Technologies  2024      SEK  51408.282950\n",
-       "12  Nexara Technologies  2025      SEK  64547.775000\n",
-       "13     Solvex Solutions  2013      SEK  37097.015873\n",
-       "14     Solvex Solutions  2014      SEK  39965.604533\n",
-       "15     Solvex Solutions  2015      SEK  30581.643100\n",
-       "16     Solvex Solutions  2016      SEK  48936.282183\n",
-       "17     Solvex Solutions  2017      SEK  40358.762483\n",
-       "18     Solvex Solutions  2018      SEK  44528.350000\n",
-       "19     Solvex Solutions  2019      SEK  56426.098782\n",
-       "20     Solvex Solutions  2020      SEK  31221.901350\n",
-       "21     Solvex Solutions  2021      SEK  39218.983683\n",
-       "22     Solvex Solutions  2022      SEK  49029.544100\n",
-       "23     Solvex Solutions  2023      SEK  50247.907100\n",
-       "24     Solvex Solutions  2024      SEK  25492.656983\n",
-       "25     Solvex Solutions  2025      SEK   6512.170000\n",
-       "26         VertexSphere  2013      SEK  53629.877200\n",
-       "27         VertexSphere  2014      SEK  57173.708583\n",
-       "28         VertexSphere  2015      SEK  43069.671567\n",
-       "29         VertexSphere  2016      SEK  23379.276167\n",
-       "30         VertexSphere  2017      SEK  23723.678150\n",
-       "31         VertexSphere  2018      SEK  41281.351491\n",
-       "32         VertexSphere  2019      SEK  39043.681333\n",
-       "33         VertexSphere  2020      SEK  44285.730133\n",
-       "34         VertexSphere  2021      SEK  39146.039836\n",
-       "35         VertexSphere  2022      SEK  66333.509833\n",
-       "36         VertexSphere  2023      SEK  36240.745717\n",
-       "37         VertexSphere  2024      SEK  55771.565150\n",
-       "38         VertexSphere  2025      SEK   2884.740000"
+       "{'data': [{'company': 'Nexara Technologies',\n",
+       "   'year': 2013,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 56254.68637999999},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2014,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 55221.31435},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2015,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 56392.964327272726},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2016,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 59863.99985},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2017,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 40127.55971666666},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2018,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 48112.668333333335},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2019,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 49536.77953333333},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2020,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 60533.85566},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2021,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 46364.30561666666},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2022,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 48985.57585},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2023,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 42141.43768333333},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2024,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 51408.28294999999},\n",
+       "  {'company': 'Nexara Technologies',\n",
+       "   'year': 2025,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 64547.775},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2013,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 37097.01587272727},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2014,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 39965.60453333333},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2015,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 30581.643099999998},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2016,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 48936.28218333333},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2017,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 40358.76248333333},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2018,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 44528.35},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2019,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 56426.09878181818},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2020,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 31221.90135},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2021,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 39218.98368333333},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2022,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 49029.5441},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2023,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 50247.907100000004},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2024,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 25492.656983333334},\n",
+       "  {'company': 'Solvex Solutions',\n",
+       "   'year': 2025,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 6512.17},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2013,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 53629.877199999995},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2014,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 57173.708583333326},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2015,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 43069.671566666664},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2016,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 23379.276166666663},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2017,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 23723.678149999996},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2018,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 41281.35149090909},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2019,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 39043.681333333334},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2020,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 44285.73013333333},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2021,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 39146.039836363634},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2022,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 66333.50983333333},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2023,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 36240.745716666665},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2024,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 55771.56515},\n",
+       "  {'company': 'VertexSphere',\n",
+       "   'year': 2025,\n",
+       "   'currency': 'SEK',\n",
+       "   'value': 2884.74}]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "annual_agg = annual_aggregation(converted_df)\n",
-    "annual_agg"
+    "records = annual_agg.to_dict(orient='records')\n",
+    "payload = {\"data\": records}\n",
+    "payload"
    ]
   }
  ],
